--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.33",
     "@types/redux": "^3.6.0",
     "express": "^4.18.3",
+    "marked": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
